ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Setting__c/CnP_PaaS__Invoice_Setting__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Invoice Setting</label>
    <nameField>
        <label>C&amp;P Invoice Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Invoice Setting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>