ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Setting__c/fields/CnP_PaaS__Counter__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Counter__c</fullName>
    <label>Counter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>