ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Setting__c/fields/CnP_PaaS__Date_Format__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Date_Format__c</fullName>
    <label>Date Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>