ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Setting__c/fields/CnP_PaaS__Incrementer__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Incrementer__c</fullName>
    <label>Incrementer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>