ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Setting__c/fields/CnP_PaaS__Seperator1__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Seperator1__c</fullName>
    <label>Seperator1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>