ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Setting__c/fields/CnP_PaaS__Seperator__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Seperator__c</fullName>
    <label>Seperator</label>
    <length>20</length>
    <type>Text</type>
</CustomField>